--- a/start/style.css
+++ b/start/style.css
@@ -1,7 +1,14 @@
 body {
-  background: url("/img/running.jpg") center top;
+  background: url("/img/running.jpg") no-repeat center top fixed;
+
+  background-size: cover;
 }
 
 .main-logo {
   width: 100px;
+}
+
+.search-engine {
+  color: #fff;
+  background: #000;
 }
