--- a/start/style.css
+++ b/start/style.css
@@ -10,11 +10,11 @@ body {
 
 .container {
   background: rgba(255, 255, 255, 0.517);
-  padding: 3px;
+  padding: 3px 0;
 }
 .search-engine h3 {
   color: #fff;
   background: #000;
   padding: 5px;
-  margin: 1px;
+  margin: 1px 0;
 }
