--- a/start/style.css
+++ b/start/style.css
@@ -47,6 +47,7 @@ nav a:hover {
   background: rgba(255, 255, 255, 0.5);
   padding: 0;
 }
+
 .search-engine h3 {
   color: #bfc22a;
   text-align: center;
@@ -58,6 +59,7 @@ nav a:hover {
 button {
   background: rgba(255, 255, 255, 0.8);
   border-color: rgba(255, 255, 255, 0.3);
+  padding: 5px;
 }
 
 button:hover {
