--- a/start/style.css
+++ b/start/style.css
@@ -3,6 +3,10 @@ body {
   background-size: cover;
 }
 
+h1 {
+  text-align: center;
+}
+
 .container {
   margin: 0 auto;
   max-width: 850px;
@@ -54,6 +58,10 @@ nav a:hover {
   background: #000;
   margin: 0;
   padding: 5px;
+}
+
+.weather-temperature {
+  text-align: center;
 }
 
 button {
